# vibecheck

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml  test.yml
api/: .gitignore  Cargo.toml  README.md
api/.github/workflows/: deploy.yml  test.yml
api/deploy/: Caddyfile  deploy.sh  post-merge  vibecheckapi.service  yoapi.service
api/migrations/: 001_create_users_table.sql  004_update_connections_bidirectional.sql  005_create_yo_messages_table.sql
api/src/: database.rs  lib.rs  main.rs
api/templates/: admin.html  dashboard.html  friends.html  index.html  layout.html  swagger.html
api/tests/: api_tests.rs
ios/: .gitignore
ios/vibecheck/: AddFriendView.swift  AuthService.swift  AuthenticationManager.swift  AuthenticationView.swift  ContentView.swift  FriendsListView.swift  LoginView.swift  SignUpView.swift  vibecheckApp.swift
ios/vibecheck.xcodeproj/: project.pbxproj
ios/vibecheckTests/: vibecheckTests.swift
ios/vibecheckUITests/: vibecheckUITests.swift  vibecheckUITestsLaunchTests.swift
ios/yo/: AddFriendView.swift  AuthService.swift  AuthenticationManager.swift  AuthenticationView.swift  ContentView.swift  FriendsListView.swift  LoginView.swift  SignUpView.swift  yoApp.swift
ios/yo.xcodeproj/: project.pbxproj
ios/yo.xcodeproj/xcshareddata/xcschemes/: yo.xcscheme
ios/yoTests/: yoTests.swift
ios/yoUITests/: yoUITests.swift  yoUITestsLaunchTests.swift
migrations/: 001_create_users_table.sql  002_create_sessions_table.sql  003_create_connections_table.sql
src/: database.rs  main.rs
templates/: index.html  layout.html
(+2 files in other folders)
