[package]
name = "yoapi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
askama = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = { version = "0.5", features = ["std"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.10"
